@@ -25,8 +25,8 @@ parser.add_option('--CanvMarginBot',action="store",dest="CanvMarginBot",type=str
 parser.add_option('--CanvMarginLf',action="store",dest="CanvMarginLf",type=str,default="0.16",help="Set Canvas Margin Left (default is 0.16)") 	
 parser.add_option('--CanvMarginRt',action="store",dest="CanvMarginRt",type=str,default="0.06",help="Set Canvas Margin Right (default is 0.06)") 
 parser.add_option('--CanvPlotType',action="store",dest="CanvPlotType",type=str,default="TGraphErrors",help="Set the Canvas Plot type (default is TGraphErrors)") 
-parser.add_option('--CanvTitleX',action="store",dest="CanvTitleX",type=str,default="Divider Current #left(#muA#right)",help="Set Xaxis title, default is: Divider Current #left(#muA#right)")
-parser.add_option('--CanvTitleY',action="store",dest="CanvTitleY",type=str,default="Applied Voltage #left(kV#right)",help="Set Yaxis title, default is: Applied Voltage #left(kV#right)")
+parser.add_option('--CanvTitleX',action="store",dest="CanvTitleX",type=str,default="Divider Current #left(#muA#right)",help="Set Xaxis title, example: Divider Current #left(#muA#right)")
+parser.add_option('--CanvTitleY',action="store",dest="CanvTitleY",type=str,default="",help="Set Yaxis title, example:Applied Voltage #left(kV#right)")
 parser.add_option('--CanvRangeX',action="store",dest="CanvRangeX",type=str,default="0,1000",help="Set the X-Range of the Canvas (default is 0,1000)") 
 parser.add_option('--CanvRangeY',action="store",dest="CanvRangeY",type=str,default="0,7",help="Set the Y-Range of the Canvas (default is 0,7)") 
 parser.add_option('--CanvTitleOffsetX',action="store",dest="CanvTitleOffsetX",type=str,default="1.0",help="Set the X-Offset of the Canvas Title (default is 1.0)") 
@@ -45,7 +45,7 @@ parser.add_option('--FitFormula',action="store",dest="FitFormula",type=str,defau
 parser.add_option('--FitLineSize',action="store",dest="FitLineSize",type=str,default="1",help="Set Fit Line Size, default is: 1")
 parser.add_option('--FitLineStyle',action="store",dest="FitLineStyle",type=str,default="1",help="Set Fit Line Style, default is: 1")
 parser.add_option('--FitOption',action="store",dest="FitOption",type=str,default="R",help="Set Fit Option, default is: R")
-parser.add_option('--FitParamIGuess',action="store",dest="FitParamIGuess",type=str,default="0",help="Set Fit Parameters initial values")
+parser.add_option('--FitParamIGuess',action="store",dest="FitParamIGuess",type=str,default="0",help="Set Fit Parameters initial values, example: 10,15 (for a fit function with two parameters)")
 parser.add_option('--FitPerform',action="store",dest="FitPerform",type=str,default="true",help="if true (default) perform a fit to the TObject defined in the [BEGIN_PLOT]header this [BEGIN_FIT] header is found in")
 parser.add_option('--FitRange',action="store",dest="FitRange",type=str,default="0,1",help="Set the Fit range, default is 0,1")
 (args,opts)=parser.parse_args()
