@@ -6,6 +6,11 @@
 *                                                *
 **************************************************
 
+Update: August 21th 2017
+==================================================
+-> README.txt: Added instructions for Produce_Config_File.py,QC3.py,QC4_*.py and QC5_*.py scripts ( 3.c.iii Analysis of QC data stored in an excel file )
+-> QC3.py,QC4_*.py and QC5_*.py: Import PlotOptions instead of Options
+
 Update: August 17th 2017
 ==================================================
 ->options.py: Switched from argparse to optparse, add append action to LatexLines option
